--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,17 +36,166 @@ section{
 }
 
 header{
-    background-color: white;
-    height: 3em;
-    padding: 0 0.5em;
+	background-color: white;
+	height: 3em;
+	padding: 0 0.5em;
 
-    nav{
-        float: right;   // pozicionira element
-        ul{
-            list-style: none;
-            li{
-                display: inline-block;  // horizontalno ih postavlja 
-            }
+	nav{
+		float: right;
+		ul{
+			list-style: none;
+			li{
+				display: inline-block;
+				margin-left: 1em;
+				a{
+					text-transform: uppercase;
+					text-decoration: none;
+					line-height: 3em;
+					&:hover {color: black;}
+				}
+			}
+		}
+	}
+}
+
+
+.logo{
+    float: left;   // izbija gornji css ako je prebise blizu
+    font-size: 2em;
+    font-weight: bold;
+    span {color: $main_red;}
+}
+
+// sa ovim je postabljen nab bar kako treba
+
+.catalog{
+    background-color: $grey_background;
+    .column{
+        width: 25%;
+        float: left;
+        text-align: center;
+
+        img{
+            width: 90%;
+        }
+        p{
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+        a{
+            background-color: $main_red;  //boja pozadine
+            padding: 0.5em 3em;  // siri element
+            color: white;   //text boja
+            text-transform: uppercase;
+            text-decoration: none;
+
         }
     }
 }
+
+//nastavi odavde 
+
+/* tabela css  */
+
+.pricing{
+	table{
+		margin: 0 auto;
+		width: 60%;
+		border-collapse: collapse;
+
+		th, td{
+			padding: 1em;
+		}
+		thead{
+			tr {
+				background-color: $main_red;
+			
+			}
+			th{
+				color: #fff;
+
+			}
+			th:first-child{
+				background-color: $red_dark;
+			}
+		}
+		tbody{
+			tr {border-bottom: 1px solid $main_text_color;}
+
+			td:first-child{
+				background-color: $grey_background;
+			}
+		}
+	}
+}
+
+footer{
+	background-color: #000;
+	padding: 5em 15em;
+	@include clearfix;
+	.logo{
+		font-size: 1.5em;
+		border-bottom: 1px solid $main_red;
+		width: 100%;
+		margin-bottom: 1em;
+	}
+	address {float:left;}
+	.map {float: right;}
+	
+}
+
+/* kako je css ugnezden gore mora biti i ovde */
+
+@media screen and (max-width: 1300px){
+	section{
+		padding: 2.5em 7.5em;
+
+	}
+	.main{padding: 1em;}
+	.catalog{
+		.column{
+			width: 50%;
+			margin-bottom: 2em;
+		}
+	}
+
+	footer{
+		padding: 1em;
+		text-align: center;
+		address, .map {width: 100%;}
+	}
+}
+
+@media screen and (max-width: 730px){
+
+	.main{
+		background-image: none;
+		background-color: #000;
+		height: auto;
+		h1 {margin-top: 5%; }
+	}
+
+	header{
+		height: auto;
+		@include clearfix;
+		nav{
+			width: 100%;
+			ul{
+				li{
+					display: block;
+				}
+			}
+
+		}
+	}
+
+	.catalog{
+		.column{
+			width: 100%;
+		}
+	}
+
+
+}
+
+
